--- a/CCAudioBot/Web.config
+++ b/CCAudioBot/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="BlueSkyAudioBot" />
+    <add key="MicrosoftAppId" value="3cdfe736-6463-4557-b013-a481fc268030" />
+    <add key="MicrosoftAppPassword" value="vW28kBc0HVY7HbwBRRjhEYn" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
