--- a/CCAudioBot/Web.config
+++ b/CCAudioBot/Web.config
@@ -9,6 +9,7 @@
     <add key="BotId" value="BlueSkyAudioBot" />
     <add key="MicrosoftAppId" value="3cdfe736-6463-4557-b013-a481fc268030" />
     <add key="MicrosoftAppPassword" value="vW28kBc0HVY7HbwBRRjhEYn" />
+    <add key="Microsoft.Bot.Builder.Calling.CallbackUrl" value="https://ccaudiobot.azurewebsites.net/api/calling/callback" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
